XRDDEV-2502: user should be able to specify only the roles they have when creating an API key in the Central Server or Security Server (#1829)
* feat: security server, allow user to select only roles they have

Refs: XRDDEV-2502

* feat: central server, allow user to select only roles they have

Refs: XRDDEV-2502

* feat: api, allow user to select only roles they have

Refs: XRDDEV-2502

* test: cs api keys system test

Refs: XRDDEV-2502

* test: ss api keys system test

Refs: XRDDEV-2502

* chore: some deprecations fixed

Refs: XRDDEV-2502

* chore: checkstyle

Refs: XRDDEV-2502

* chore: sonar

Refs: XRDDEV-2502

* chore: sonar

Refs: XRDDEV-2502

* test: add test user for cs sys tests

Refs: XRDDEV-2502

* test: ss-entrypoint.sh updated for github actions system tests

Refs: XRDDEV-2502

* test: copy required securityserver files instead of duplicating

Refs: XRDDEV-2502

* Revert "test: copy required securityserver files instead of duplicating"

This reverts commit 1e6aba1d61454c65e7412977355a58a6ca0ea244.